src/style.css
:root {
    --color-primary-dark: #333447;
    --color-primary-light: #fff;
    --color-secondary: #F0544F;
}
a {
    text-decoration: none;
    transition: all 0.2s ease;
}

a:hover,
a:active {
    color: var(--color-secondary);
}

.project {
    background-color: var(--color-primary-light);
    height: 150px;
    border: 2px solid var(--color-primary-dark);
}

.project-info {
    margin: 5% ;
}

li {
    list-style-type: none;
    margin: 15px;
    display: inline;
}


.type-dark {
    color: var(--color-primary-dark);
}

.type-light {
    color: var(--color-primary-light);
}

.full-page {
    height: 100vh;
}

